@@ -1,3 +1,8 @@
+2000-10-16  Jonathan Blandford  <jrb@redhat.com>
+
+	* gtk/gtktreeviewcolumn.c: Added API documentation to all public
+	functions.
+
 2000-10-15  Jonathan Blandford  <jrb@redhat.com>
 
 	* gtk/gtktreeview.c (gtk_tree_view_insert_column): New function
